# gazebo_ros2_ground_suerveillance

./: .gitignore  Dockerfile  README.md  arena  arena_1  arena_1.sdf  build.sh  run.sh
arena_2/: model.config  model.sdf
gazebo_ros2_ws/src/surveillanceBot_gazebo/: CMakeLists.txt  package.xml
gazebo_ros2_ws/src/surveillanceBot_gazebo/src/: ControllerNode.cpp  ControllerNode.hpp  bot_controller.cpp
gazebo_ros2_ws/src/surveillance_bot_gazebo/: CMakeLists.txt  package.xml
gazebo_ros2_ws/src/surveillance_bot_gazebo/src/: ControllerNode.cpp  ControllerNode.hpp
setup/: install_gazebo.sh  install_ros2.sh
